added: Search functionality and some other tweaks

--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -12,22 +12,26 @@
 
 <body>
 
-<div class="card mb-3" style="max-width: 540px;">
-    <div class="row g-0">
-        <div class="col-md-4">
-            <img th:src="${coverImage}" class="img-fluid rounded-start" alt="...">
-        </div>
-        <div class="col-md-8">
-            <div class="card-body">
-                <h5 class="card-title display-1" th:text="${book.name}">Name</h5>
-                <p class="card-text display-5" th:text="${book.authorNames}">Author Name</p>
-                <p class="card-text" th:text="${book.description}">Book Description</p>
-                <p class="card-text">Published Date: <small class="text-muted"
-                                                            th:text="${book.publishDate}">2020-01-01</small></p>
+<div th:insert="components/book-search"></div>
+
+<section class="section">
+    <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+            <div class="col-md-4">
+                <img th:src="${coverImage}" class="img-fluid rounded-start" alt="Book cover image" src="">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title display-1" th:text="${book.name}">Name</h5>
+                    <p class="card-text display-5" th:text="${book.authorNames}">Author Name</p>
+                    <p class="card-text" th:text="${book.description}">Book Description</p>
+                    <p class="card-text">Published Date: <small class="text-muted"
+                                                                th:text="${book.publishDate}">2020-01-01</small></p>
+                </div>
             </div>
         </div>
     </div>
-</div>
+</section>
 </body>
 
 </html>
