--- a/src/main/resources/templates/search_error.html
+++ b/src/main/resources/templates/search_error.html
@@ -10,6 +10,6 @@
 <body>
 <div th:insert="components/book-search"></div>
 
-<h1>Book not found</h1>
+<h1>Error searching book</h1>
 </body>
 </html>
