added: user book interaction track

--- a/src/main/resources/templates/components/book-search.html
+++ b/src/main/resources/templates/components/book-search.html
@@ -3,6 +3,7 @@
 
 <body>
 <div th:fragment="search-panel">
+    <!--suppress HtmlUnknownTarget -->
     <form action="/search" th:attr="action=@{/search}">
         <div class="input-group mb-3">
             <input type="text" class="form-control" placeholder="Search book" aria-label="Search book query"
