--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -27,6 +27,48 @@
                     <p class="card-text" th:text="${book.description}">Book Description</p>
                     <p class="card-text">Published Date: <small class="text-muted"
                                                                 th:text="${book.publishDate}">2020-01-01</small></p>
+
+                    <form th:attr="action=@{/addUserBook}" method="post">
+                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+                        <input type="hidden" name="bookId" th:value="${book.id}">
+                        <div class="mb-3">
+                            <label for="startDate" class="form-label">Start Date</label>
+                            <input type="date" class="form-control" name="startDate" id="startDate"
+                                   th:value="${userBook.startDate}">
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="completedDate" class="form-label">Complete Date</label>
+                            <input type="date" class="form-control" name="completedDate" id="completedDate"
+                                   th:value="${userBook.completedDate}">
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="status" class="form-label">Status</label>
+                            <select class="form-select" id="status" name="readingStatus" aria-label="Reading status"
+                                    th:field="${userBook.readingStatus}">
+                                <option selected value="0">Status</option>
+                                <option value="reading">Reading</option>
+                                <option value="finished">Finished</option>
+                                <option value="dnf">Did not finish</option>
+                            </select>
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="ratings" class="form-label">Rating</label>
+                            <select class="form-select" id="ratings" name="rating" aria-label="Reading status"
+                                    th:field="${userBook.rating}">
+                                <option selected value="-1">Rating</option>
+                                <option value="1">&#9734;</option>
+                                <option value="2">&#9734;&#9734;</option>
+                                <option value="3">&#9734;&#9734;&#9734;</option>
+                                <option value="4">&#9734;&#9734;&#9734;&#9734;</option>
+                                <option value="5">&#9734;&#9734;&#9734;&#9734;&#9734;</option>
+                            </select>
+                        </div>
+
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
                 </div>
             </div>
         </div>
